# src/rest-server/docs/swagger.yaml
@@ -1397,6 +1397,46 @@ paths:
                   $ref: "#/components/responses/NoTagError/content/application~1json/examples/NoTagError"
         "500":
           $ref: "#/components/responses/UnknownError"
+  "/api/v2/jobs/{user}~{job}/events":
+    get:
+      tags:
+        - job
+      summary: Get events of a job.
+      description: Get events of a job.
+      operationId: getEvents
+      security:
+        - bearerAuth: []
+      parameters:
+        - name:
+          in: type
+          description: filter events with type. Could be "Warning" or "Normal".
+          schema:
+            type: string
+      requestBody:
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                value:
+                  type: string
+                  description: tag
+              required:
+                - value
+        required: true
+      responses:
+        "200":
+          description: Succeeded
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/JobEventsWithTotalCount"
+              example:
+                - uid: "test"
+        "404":
+          $ref: "#/components/responses/NoJobError"
+        "500":
+          $ref: "#/components/responses/UnknownError"
   "/api/v2/jobs/{user}~{job}/job-attempts/healthz":
     get:
       tags:
@@ -1727,6 +1767,84 @@ components:
       required:
         - totalCount
         - data
+    JobEventsWithTotalCount:
+      type: object
+      properties:
+        totalCount:
+          type: number
+          description: total count of events with given filters
+        data:
+          $ref: "#/components/schemas/JobEvents"
+      required:
+        - totalCount
+        - data
+    JobEvents:
+      type: array
+      description: job event list
+      items:
+        type: object
+        properties:
+          uid:
+            type: string
+            description: event uid
+          frameworkName:
+            type: string
+            description: related framework name
+          podUid:
+            type: string
+            description: pod uid of the event
+          taskroleName:
+            type: string
+            description: taskrole name of the event
+          taskName:
+            type: string
+            description: task name of the event
+          taskIndex:
+            type: integer
+            description: task index of the event
+          type:
+            type: string
+            description: type of the event
+            enum:
+              - Normal
+              - Warning
+          reason:
+            type: string
+            description: event reason
+          message:
+            type: string
+            description: event message
+          firstTimestamp:
+            type: string
+            description: firstTimestamp of the event
+          lastTimestamp:
+            type: string
+            description: lastTimestamp of the event
+          count:
+            type: integer
+            description: event count between firstTimestamp and lastTimestamp
+          sourceComponent:
+            type: string
+            description: source component of the event
+          sourceHost:
+            type: string
+            nullable: true
+            description: source host of the event
+        required:
+          - uid
+          - frameworkName
+          - podUid
+          - taskroleName
+          - taskName
+          - taskIndex
+          - type
+          - reason
+          - message
+          - firstTimestamp
+          - lastTimestamp
+          - count
+          - sourceComponent
+          - sourceHost
     JobSummary:
       type: array
       description: job summary list
