# src/rest-server/src/models/v2/job/k8s.js
@@ -1255,6 +1255,35 @@ const deleteTag = async (frameworkName, tag) => {
   }
 };
 
+const getEvents = async (frameworkName, attributes, filters) => {
+  const name = encodeName(frameworkName);
+  const framework = await databaseModel.Framework.findOne({
+    attributes: ['name'],
+    where: { name: name },
+  });
+
+  if (framework) {
+    filters.frameworkName = name;
+    events = await databaseModel.FrameworkEvent.findAll({
+      attributes: attributes,
+      where: filters,
+      order: [['lastTimestamp', 'DESC']],
+    });
+    return {
+      // we use events.length as totolCount because paging is not supported
+      // if paging is enabled in the future, we should fire another SQL request to get the real total count
+      'totalCount': events.length,
+      'data': events,
+    }
+  } else {
+    throw createError(
+      'Not Found',
+      'NoJobError',
+      `Job ${frameworkName} is not found.`,
+    );
+  }
+};
+
 const generateExitDiagnostics = (diag) => {
   if (_.isEmpty(diag)) {
     return null;
@@ -1364,4 +1393,5 @@ module.exports = {
   getSshInfo,
   addTag,
   deleteTag,
+  getEvents,
 };
